# cirnoYSF

./: .gitignore  LICENSE  README.md  build.sh  build_mingw.sh
.github/workflows/: cmake-multi-platform-dev.yml  cmake-multi-platform.yml
public/src/fssimplewindow/src/windows/: fswin32wrapper.cpp
runtime/: ys_timestamp.txt
runtime/language/: en.uitxt  ja.uitxt
src/: CMakeLists.txt
src/common/: fsdef.h  fstextresource.h
src/config/: fsconfig.cpp  fsconfig.h  fsoption.cpp
src/core/: CMakeLists.txt  fscloud.cpp  fsdialog.h  fsguiconfigdlg.cpp  fsguiconfigdlg.h  fsguinewflightdialog.cpp  fsguinewflightdialog.h  fsguiprogressdialog.cpp  fsguiprogressdialog.h  fssiminfo.cpp  fssimpleprogressdisplay.cpp  fssimpleprogressdisplay.h  fssimulation.cpp  fssimulation.h  fssimulation_safe.cpp  fssimulationcalcthread.cpp  fssimulationcalcthread.h  fssimulationcalcthread_impl.cpp  fssubmenu.cpp  fsweather.cpp  fsweather.h  fsworld.cpp  fsworld.h
src/graphics/common/: CMakeLists.txt  fsculling.cpp  fsculling.h  fsexperimentalshadow.cpp  fsexperimentalshadow.h  fsexperimentalshadowintegration.cpp  fsexperimentalshadowintegration.h  fsmultithreadrenderer.cpp  fsmultithreadrenderer.h  fsopengl.h  fsrendercommandqueue.cpp  fsrendercommandqueue.h
src/graphics/gl/: fsgroundskygl.cpp  fsopengl.cpp
src/graphics/gl2.0/: fsgl2optimized.cpp  fsgl2optimized.h  fsgroundskygl2.0.cpp  fsopengl2.0.cpp  fsopengl2.0.h
src/gui/: fsguicommondialog.cpp  fsguimaincanvas.cpp  fsguimaincanvas.h  fsmenu.cpp  fsmenu.h  fsmenu_file.cpp  fsmenu_sim.cpp
src/main/: CMakeLists.txt  fsmain.cpp
src/main_demoOnly/: CMakeLists.txt
src/platform/mingw/: CMakeLists.txt  fswin32gl.cpp
src/platform/win32/: fswin32.cpp
src/sounddll/win32/: CMakeLists.txt
src/ui/: fsrunloop.cpp
src/ysjoystick/src/: CMakeLists.txt  fsjoycalibdlg.cpp
